properties file changed

--- a/booking-dev.properties
+++ b/booking-dev.properties
@@ -1,4 +1,4 @@
-booking.prop1 = Booking properties one
+booking.prop1 = Booking properties dev
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
