--- a/booking_microservices-prod.properties
+++ b/booking_microservices-prod.properties
@@ -1,4 +1,4 @@
-booking.prop1 = Booking properties one prod
+booking_microservices.prop1 = Booking properties one prod
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
