--- a/microservices-dev.properties
+++ b/microservices-dev.properties
@@ -1,2 +1,2 @@
 product.prop1 = Product properties dev
-spring.data.mongodb.uri=mongodb://root:root@local-mongo:27017/database?authSource=admin
+spring.data.mongodb.uri=mongodb://root:root@localhost:27017/database?authSource=admin
