--- a/microservices-dev.properties
+++ b/microservices-dev.properties
@@ -1,2 +1,3 @@
 product.prop1 = Product properties dev
-spring.data.mongodb.uri=mongodb://localhost:27017/database
+spring.data.mongodb.uri=mongodb://root:root@localhost:27017/database?authSource=admin
+
