--- a/microservices-dev.properties
+++ b/microservices-dev.properties
@@ -1,3 +1,3 @@
-product.prop1 = Product properties dev
+microservices.prop1 = Product properties dev
 spring.data.mongodb.uri=mongodb://root:root@localhost:27017/database?authSource=admin
 
