centrlized server changed

--- a/microservices-dev.properties
+++ b/microservices-dev.properties
@@ -1,4 +1,4 @@
 # application-dev.properties (in the configuration repository)
 spring.application.name=microservices
-#spring.data.mongodb.uri=mongodb://root:root@localhost:27017/database?authSource=admin
+spring.data.mongodb.uri=mongodb://root:root@localhost:27017/database?authSource=admin
 microservices.prop1=Product properties dev
